fixed feature .content height, text alignment

--- a/fotomatic/resources/css/style.css
+++ b/fotomatic/resources/css/style.css
@@ -272,27 +272,41 @@ header .content .logo {
 /* Features Section */
 
 #features-section {
-  height: 635px;
   display: flex;
   justify-content: space-between;
   padding: 4rem 5%;
   background-color: #f3f3f3;
 }
 
+.feature {
+  height: 635px;
+  flex: 1;
+  margin: 0px 1.25rem;
+  background-color: white;
+}
+
 .feature .image-container {
   width: 90%;
   height: 65%;
-  margin: 0 auto;
-  overflow: hidden; /* Prevent overflow */
-  display: flex; /* Use flexbox if needed */
-  align-items: center; /* Center the image vertically */
-  justify-content: center; /* Center the image horizontally */
+  margin: 32px 32px 40px 32px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .feature .image-container img {
-  max-width: 100%; /* Make the image responsive */
+  max-width: 100%; 
   height: auto; /* Maintain aspect ratio */
   display: block; /* Prevent bottom margin/space */
+}
+
+.feature .content {
+  height: 187px;
+  padding: 0px 0px 0px 0px;
+  margin: 0px auto;
+  width: 80%;
+ 
 }
 
 .feature h2 {
@@ -312,31 +326,6 @@ header .content .logo {
   color: #4a4a4a;
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
-}
-
-@media only screen and (max-width: 890px) {
-  .feature h2 {
-    font-size: 1.125rem;
-    line-height: 1.3;
-    font-weight: normal;
-  }
-
-  .feature h3 {
-    font-size: .875rem;
-    line-height: 1.4;
-  }
-}
-
-@media only screen and (max-width: 760px) {
-  #features-section {
-    flex-flow: column;
-    padding: 0;
-  }
-
-  .feature {
-    margin: 0;
-    padding: 1.25rem 1rem 0 1rem;
-  }
 }
 
 /* Filters Section */
